2008-05-12  Gert Driesen  <drieseng@users.sourceforge.net>

	* FieldInfoTest.cs: Added tests for GetFieldFromHandle.
	* MethodBaseTest.cs: Added tests for GetMethodFromHandle.

2008-04-16  Zoltan Varga  <vargaz@gmail.com>

	* BinderTests.cs: Applied patch from Yves Bastide (doc.formatique@gmail.com). Add 
	tests for converting integers to enums.

2008-03-25  Zoltan Varga  <vargaz@gmail.com>

	* ConstructorInfoTest.cs: Add a test for #373459.

	* MethodInfoTest.cs: Add a test for #373448.

2008-03-14  Zoltan Varga  <vargaz@gmail.com>

	* BinderTests.cs: Add tests for #367655.

2008-03-10  Gert Driesen  <drieseng@users.sourceforge.net>

	* AssemblyTest.cs: Improved tests for GetFile, GetObjectData and
	GetCustomAttributes.

2008-02-20  Raja R Harinath  <harinath@hurrynot.org>

	* MethodInfoTest.cs (GetGenericMethodDefinition): Add a test for
	an instantiation.
	(Bug354757): New test.

2008-02-18  Zoltan Varga  <vargaz@gmail.com>

	* CustomAttributeDataTest.cs: New file.

2008-02-02  Gert Driesen  <drieseng@users.sourceforge.net>

	* MethodInfoTest.cs: Numbered tests. Improved existing tests.
	* ParameterInfoTest.cs: Added test for bug #342536.

2008-01-30  Zoltan Varga  <vargaz@gmail.com>

	* AssemblyTest.cs (GetModules_MissingFile): Rename the generated assembly to
	avoid name clashes.

	* AssemblyTest.cs: Add a test for GetModules () and a missing module.

	* ModuleTest.cs: Add a test for GetTypes ().

2008-01-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* AssemblyNameTest.cs: Added test for effect of AssemblyNameFlags on
	FullName. Added test for PublicKey with value "null". Added ctor test
	for Retargetable spec.

2008-01-15  Jb Evain  <jbevain@novell.com>

	* MethodInfoTest.cs: Add test for null arguments to
	MakeGenericMethod (#353849).

2008-01-06  Gert Driesen  <drieseng@users.sourceforge.net>

	* AssemblyNameTest.cs: Improved tests for ProcessorArchictecture.

2007-12-31  Gert Driesen  <drieseng@users.sourceforge.net>
