@@ -1,3 +1,7 @@
+2008-06-13  Gert Driesen  <drieseng@users.sourceforge.net>
+
+	* PropertyInfoTest.cs: Added test for bug #399985.
+
 2008-05-12  Gert Driesen  <drieseng@users.sourceforge.net>
 
 	* FieldInfoTest.cs: Added tests for GetFieldFromHandle.
